feat: add stores for user merchant
