# routes/routes.go
@@ -3,6 +3,7 @@ package routes
 import (
 	"hewantani/controllers"
 	"hewantani/middlewares"
+	"hewantani/services"
 
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
@@ -19,12 +20,19 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 		c.Set("db", db)
 	})
 
-	r.POST("/register", controllers.Register)
-	r.POST("/login", controllers.Login)
+	controller := controllers.Controller{}
+	controller.UserService = services.User{Db: db}
+	controller.RoleService = services.Role{Db: db}
+	controller.StoreService = services.Store{Db: db}
 
-	productMiddleware := r.Group("/products")
-	productMiddleware.Use(middlewares.JwtAuthMiddleware())
-	productMiddleware.POST("/	", controllers.PostProduct)
+	authController := controllers.AuthController{Controller: controller}
+	r.POST("/register", authController.Register)
+	r.POST("/login", authController.Login)
+
+	storeController := controllers.StoreController{Controller: controller}
+	storeRoutes := r.Group("/stores")
+	storeRoutes.Use(middlewares.JwtAuthMiddleware())
+	storeRoutes.POST("/", storeController.CreateStore)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
